Added directions challenge

--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -23,3 +23,11 @@
     </div>
 </div>
 <hr>
+<div class="row">
+    <div class="col-md-4 col-xm-4 center">
+        <mat-card class="cardSize">
+            <directions title="Directions"></directions>
+        </mat-card>
+    </div>
+</div>
+<hr>
