Improved crossword but it's still imperfect

--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -31,3 +31,18 @@
     </div>
 </div>
 <hr>
+<div class="row">
+    <div class="col-md-4 col-xm-4 center">
+        <mat-card class="cardSize">
+            <to-do-list title="To Do List"></to-do-list>
+        </mat-card>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-4 col-xm-4 center">
+        <mat-card class="cardSize">
+            <crossword title="Crossword"></crossword>
+        </mat-card>
+    </div>
+</div>
