--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,28 @@
-<p>projects works!</p>
+<div class="row margin-top pos-center" *ngFor="let project of projects">
+    <div class="col-md-4 col-sm-4  margin-left-right">
+        <mat-card class="max-card-width">
+            <mat-card-header>
+                <mat-card-title>{{ project[0].title }}</mat-card-title>
+                <mat-card-subtitle>{{ project[0].subtitle }}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image [src]="project[0].src" [alt]="project[0].title">
+            <mat-card-content>
+                <p>
+                </p>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div class="col-md-4 col-sm-4 margin-left-right">
+        <mat-card class="max-card-width">
+            <mat-card-header>
+                <mat-card-title>{{ project[1].title }}</mat-card-title>
+                <mat-card-subtitle>{{ project[1].subtitle }}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image [src]="project[1].src" [alt]="project[1].title">
+            <mat-card-content>
+                <p>
+                </p>
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
