--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -8,8 +8,12 @@
             <img mat-card-image [src]="project[0].src" [alt]="project[0].title">
             <mat-card-content>
                 <p>
+                    {{ project[0].description }}
                 </p>
             </mat-card-content>
+            <mat-card-actions>
+                <a mat-button [href]="project[0].url" target="_blank">Go to {{ project[0].title }}</a>
+            </mat-card-actions>
         </mat-card>
     </div>
     <div class="col-md-4 col-sm-4 margin-left-right">
@@ -21,8 +25,12 @@
             <img mat-card-image [src]="project[1].src" [alt]="project[1].title">
             <mat-card-content>
                 <p>
+                    {{ project[1].description }}
                 </p>
             </mat-card-content>
+            <mat-card-actions>
+                <a mat-button [href]="project[1].url" target="_blank">Go to {{ project[1].title }}</a>
+            </mat-card-actions>
         </mat-card>
     </div>
 </div>
