fixed image not displaying

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,7 +4,7 @@
         <main *ngIf="tile.title === 'Summary'">
             <div>
                 <h1>Matias Galante</h1>
-                <img src="../../assets/about-me/MatiasPicture.jpg" alt="Matias">
+                <img src="./assets/about-me/MatiasPicture.jpg" alt="Matias">
             </div>
             <p>{{ tile.content }}</p>
             <a mat-raised-button color="primary" target="_blank"
