--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -6,7 +6,9 @@
                 <h1>Matias Galante</h1>
                 <img src="./assets/about-me/MatiasPicture.jpg" alt="Matias">
             </div>
-            <p>{{ tile.content }}</p>
+            <div>
+                <p>{{ tile.content }}</p>
+            </div>
             <a mat-raised-button color="primary" target="_blank"
                 href="https://www.linkedin.com/in/matias-galante-20bbb4161">
                 LinkedIn
