--- a/src/app/shared-styles/card-styles.component.css
+++ b/src/app/shared-styles/card-styles.component.css
@@ -1,14 +1,16 @@
 .margin-top{
-    margin-top: 40px;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
-.margin-left-right{
-    margin-left: 5px;
-    margin-right: 5px;
+.card-margin{
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 .max-card-width{
     max-width: 500px;
+    min-width: 400px;
 }
 
 .pos-center{
@@ -19,4 +21,9 @@
 .certificate-header-image{
     background-image: url('../../assets/certificates/UdemyLogo.PNG');
     background-size: cover;
+}
+
+.flex-wrap{
+    display: flex;
+    flex-wrap: wrap;
 }
