fixed arrows in carousel to face correct direction

--- a/src/app/about-me/carousel/carousel.component.html
+++ b/src/app/about-me/carousel/carousel.component.html
@@ -4,9 +4,9 @@
     </ng-container>
 
     <button class="control prev" (click)="onPreviousClick()">
-        <span class="arrow left"></span>
+        <span class="arrow"></span>
     </button>
     <button class="control next" (click)="onNextClick()">
-        <span class="arrow right"></span>
+        <span class="arrow"></span>
     </button>
 </div>
