--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -46,3 +46,11 @@
         </mat-card>
     </div>
 </div>
+<hr>
+<div class="row">
+    <div class="col-md-12 col-xm-12 center">
+        <mat-card class="treasure-hunt-card">
+            <app-treasure-hunt title="Treasure Hunt"></app-treasure-hunt>
+        </mat-card>
+    </div>
+</div>
