--- a/src/app/about-me/carousel/carousel.component.css
+++ b/src/app/about-me/carousel/carousel.component.css
@@ -14,8 +14,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    /*max-width: 80%;*/
     width: 100%;
-    height: 100%;
     object-fit: cover;
     /* zoom effect on hover */
     transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
