--- a/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.css
+++ b/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.css
@@ -1,8 +1,12 @@
-/*#adventure{
-    max-width: 400px;
-}*/
+textarea:hover{
+    cursor: default;
+}
 
-nav, aside{
+main{
+    text-align: center;
+}
+
+nav{
     background-color: green;
 }
 
@@ -15,16 +19,24 @@ nav, section{
 }
 
 textarea{
+    margin: 10px;
     resize: none;
+}
+
+textarea:focus{
+    outline: none;
 }
 
 aside{
     display: flex;
     flex-wrap: wrap;
-    min-width: 360px;
-    gap: 10px;
-    padding: 10px;
-    font-family: Consolas;
+    width: 308px;
+}
+
+#map-border{
+    border: 4px solid black;
+    border-radius: 10px;
+    width: 308px;
 }
 
 .nozone{
@@ -35,5 +47,5 @@ aside{
 
 .player{
     position: absolute;
-    left: 150px;
+    left: 140px;
 }
