--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,25 +1,8 @@
 <mat-toolbar color="primary">
-  <span fxFlex>Matias Galante</span>
   @for(item of menuItems; track item.route) {
-  <button [routerLink]="item.route" mat-button>
-    <mat-icon class="mr">{{item.icon}}</mat-icon>
+  <button matFab extended [routerLink]="item.route" color="primary">
+    <mat-icon>{{item.icon}}</mat-icon>
     {{item.label}}
   </button>
   }
-  <button mat-icon-button [matMenuTriggerFor]="dropMenu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
-  <mat-menu #dropMenu="matMenu">
-    @for(item of menuItems; track item.route) {
-    <ng-container>
-      <div>
-        <button [routerLink]="item.route" mat-menu-item>
-          <mat-icon class="mr">{{item.icon}}</mat-icon>
-          {{item.label}}
-        </button>
-        <mat-divider></mat-divider>
-      </div>
-    </ng-container>
-    }
-  </mat-menu>
 </mat-toolbar>
