--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,7 @@
 @for(tile of tiles; track tile.title) {
-<div class="row">
+<div>
   @if(tile.title === 'Summary') {
-  <main class="col-md-12 col-sm-12">
+  <main>
     <div>
       <h1>Matias Galante</h1>
       <img src="./assets/about-me/MatiasPicture.jpg" alt="Matias">
