--- a/src/app/certificates/certificates.component.html
+++ b/src/app/certificates/certificates.component.html
@@ -1,5 +1,5 @@
-<div class="row margin-top pos-center flex-wrap" *ngFor="let certificate of certificates">
-    <div class="col-md-4 col-sm-6 card-margin">
+<div class="margin-top pos-center flex-wrap" *ngFor="let certificate of certificates">
+    <div class="card-margin">
         <mat-card class="max-card-width">
             <mat-card-header>
                 <div mat-card-avatar class="certificate-header-image"></div>
@@ -13,7 +13,7 @@
             </mat-card-content>
         </mat-card>
     </div>
-    <div class="col-md-4 col-sm-6 card-margin">
+    <div class="card-margin">
         <mat-card class="max-card-width">
             <mat-card-header>
                 <div mat-card-avatar class="certificate-header-image"></div>
