--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -1,54 +1,54 @@
 <h3>Coding Challenges</h3>
-<div class="row">
-    <div class="col-md-4 col-xm-4 center">
+<div>
+    <div>
         <mat-card class="cardSize">
             <chemistry-calculator title="Chemistry Calculator"></chemistry-calculator>
         </mat-card>
     </div>
 </div>
 <hr>
-<div class="row">
-    <div class="col-md-4 col-xm-4 center">
+<div>
+    <div>
         <mat-card class="cardSize">
             <roman-numerals title="Roman Numerals"></roman-numerals>
         </mat-card>
     </div>
 </div>
 <hr>
-<div class="row">
-    <div class="col-md-4 col-xm-4 center">
+<div>
+    <div>
         <mat-card class="cardSize">
             <tic-tac-toe title="Tic Tac Toe"></tic-tac-toe>
         </mat-card>
     </div>
 </div>
 <hr>
-<div class="row">
-    <div class="col-md-4 col-xm-4 center">
+<div>
+    <div>
         <mat-card class="cardSize">
             <directions title="Directions"></directions>
         </mat-card>
     </div>
 </div>
 <hr>
-<div class="row">
-    <div class="col-md-4 col-xm-4 center">
+<div>
+    <div>
         <mat-card class="cardSize">
             <to-do-list title="To Do List"></to-do-list>
         </mat-card>
     </div>
 </div>
 <hr>
-<div class="row">
-    <div class="col-md-4 col-xm-4 center">
+<div>
+    <div>
         <mat-card class="cardSize">
             <crossword title="Crossword"></crossword>
         </mat-card>
     </div>
 </div>
 <hr>
-<div class="row">
-    <div class="col-md-12 col-xm-12 center">
+<div>
+    <div>
         <mat-card class="treasure-hunt-card">
             <app-treasure-hunt title="Treasure Hunt"></app-treasure-hunt>
         </mat-card>
