Refactored many components to be standalone and updated the *ng syntax to use the newer @if() and @for() syntax

--- a/src/app/certificates/certificates.component.html
+++ b/src/app/certificates/certificates.component.html
@@ -1,26 +1,13 @@
-<div class="margin-top pos-center flex-wrap" *ngFor="let certificate of certificates">
+@for (certificate of certificates; track certificate.title) {
+<div class="margin-top pos-center flex-wrap">
     <div class="card-margin">
         <mat-card class="max-card-width">
             <mat-card-header>
                 <div mat-card-avatar class="certificate-header-image"></div>
-                <mat-card-title>{{ certificate[0].title }}</mat-card-title>
-                <mat-card-subtitle>{{ certificate[0].subtitle }}</mat-card-subtitle>
+                <mat-card-title>{{ certificate.title }}</mat-card-title>
+                <mat-card-subtitle>{{ certificate.subtitle }}</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image [src]="certificate[0].src" [alt]="certificate[0].title">
-            <mat-card-content>
-                <p>
-                </p>
-            </mat-card-content>
-        </mat-card>
-    </div>
-    <div class="card-margin">
-        <mat-card class="max-card-width">
-            <mat-card-header>
-                <div mat-card-avatar class="certificate-header-image"></div>
-                <mat-card-title>{{ certificate[1].title }}</mat-card-title>
-                <mat-card-subtitle>{{ certificate[1].subtitle }}</mat-card-subtitle>
-            </mat-card-header>
-            <img mat-card-image [src]="certificate[1].src" [alt]="certificate[1].title">
+            <img mat-card-image [src]="certificate.src" [alt]="certificate.title">
             <mat-card-content>
                 <p>
                 </p>
@@ -28,3 +15,4 @@
         </mat-card>
     </div>
 </div>
+}
