--- a/src/app/coding-challenges/crossword/crossword.component.html
+++ b/src/app/coding-challenges/crossword/crossword.component.html
@@ -1,14 +1,20 @@
 <h3>{{ title }}</h3>
 <div>
-    <h4>Words:</h4>
-    <ul *ngFor="let word of words">
-        <li>{{ word.value }}</li>
-    </ul>
+  <h4>Words:</h4>
+  @for (word of words; track word) {
+  <ul>
+    <li>{{ word.value }}</li>
+  </ul>
+  }
 </div>
-<div id="crosswordDiv" *ngFor="let row of crossword; let i = index">
-    <span *ngFor="let element of row; let j = index">
-        <span [id]="[i,j]">{{ element }}</span>
-    </span>
+@for (row of crossword; track row; let i = $index) {
+<div id="crosswordDiv">
+  @for (element of row; track element; let j = $index) {
+  <span>
+    <span [id]="[i,j]">{{ element }}</span>
+  </span>
+  }
 </div>
+}
 <button mat-raised-button color="primary" (click)="initializeCrossword()">Generate random crossword</button>&nbsp;&nbsp;
 <button mat-raised-button color="primary" (click)="solve()">Solve</button>
