--- a/src/app/coding-challenges/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/coding-challenges/tic-tac-toe/tic-tac-toe.component.html
@@ -1,10 +1,14 @@
 <h3>{{ title }}</h3>
 <h3>{{ winnerStatus }}</h3>
 <div class="gameBoard">
-    <div *ngFor="let row of ticTacGameBoard; let i=index;" class="gameBoardRow">
-        <span *ngFor="let col of row; let j=index;" [class]="col" class="gameBoardSquare" (click)="getToken(col, i, j)">
-            {{ col }}
-        </span>
-    </div>
+  @for (row of ticTacGameBoard; track row; let i = $index) {
+  <div class="gameBoardRow">
+    @for (col of row; track col; let j = $index) {
+    <span [class]="col" class="gameBoardSquare" (click)="getToken(col, i, j)">
+      {{ col }}
+    </span>
+    }
+  </div>
+  }
 </div>
 <button mat-raised-button color="primary" (click)="restart()">Restart</button>
