Updated alignment in the coding-challenges component

--- a/src/app/coding-challenges/coding-challenges.component.css
+++ b/src/app/coding-challenges/coding-challenges.component.css
@@ -1,14 +1,6 @@
-.center{
-    display: flex;
-    justify-content: center;
-    margin-top: 60px;
-}
+@import '../shared-styles/card-styles.component.css';
 
-.cardSize{
-    min-width:324px;
-}
-
-.treasure-hunt-size{
+.treasure-hunt-size {
     min-width: 400px;
     min-height: 500px;
 }
