--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -1,56 +1,24 @@
 <h3>Coding Challenges</h3>
-<div>
-  <div>
-    <mat-card class="cardSize">
-      <chemistry-calculator title="Chemistry Calculator"></chemistry-calculator>
-    </mat-card>
-  </div>
-</div>
-<hr>
-<div>
-  <div>
-    <mat-card class="cardSize">
-      <roman-numerals title="Roman Numerals"></roman-numerals>
-    </mat-card>
-  </div>
-</div>
-<hr>
-<div>
-  <div>
-    <mat-card class="cardSize">
-      <tic-tac-toe title="Tic Tac Toe"></tic-tac-toe>
-    </mat-card>
-  </div>
-</div>
-<hr>
-<div>
-  <div>
-    <mat-card class="cardSize">
-      <directions title="Directions"></directions>
-    </mat-card>
-  </div>
-</div>
-<hr>
-<div>
-  <div>
-    <mat-card class="cardSize">
-      <to-do-list title="To Do List"></to-do-list>
-    </mat-card>
-  </div>
-</div>
-<hr>
-<div>
-  <div>
-    <mat-card class="cardSize">
-      <crossword title="Crossword"></crossword>
-    </mat-card>
-  </div>
-</div>
-<hr>
-<div>
-  <div>
-    <mat-card class="treasure-hunt-card">
-      <app-treasure-hunt title="Treasure Hunt"></app-treasure-hunt>
-    </mat-card>
-  </div>
+<div class="card-container">
+  <mat-card class="display-card" appearance="outlined">
+    <chemistry-calculator title="Chemistry Calculator"></chemistry-calculator>
+  </mat-card>
+  <mat-card class="display-card" appearance="outlined">
+    <roman-numerals title="Roman Numerals"></roman-numerals>
+  </mat-card>
+  <mat-card class="display-card" appearance="outlined">
+    <tic-tac-toe title="Tic Tac Toe"></tic-tac-toe>
+  </mat-card>
+  <mat-card class="display-card" appearance="outlined">
+    <directions title="Directions"></directions>
+  </mat-card>
+  <mat-card class="display-card" appearance="outlined">
+    <to-do-list title="To Do List"></to-do-list>
+  </mat-card>
+  <mat-card class="display-card" appearance="outlined">
+    <crossword title="Crossword"></crossword>
+  </mat-card>
+  <mat-card class=" display-card treasure-hunt-card" appearance="outlined">
+    <app-treasure-hunt title="Treasure Hunt"></app-treasure-hunt>
+  </mat-card>
 </div>
