--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -1,12 +1,12 @@
 <h3>Coding Challenges</h3>
 <div class="card-container">
   <mat-card class="display-card" appearance="outlined">
-    <chemistry-calculator title="Chemistry Calculator"></chemistry-calculator>
+    <chemistry-calculator [title]="'Chemistry Calculator'"></chemistry-calculator>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
-    <roman-numerals title="Roman Numerals"></roman-numerals>
+    <roman-numerals [title]="'Roman Numerals'"></roman-numerals>
   </mat-card>
-  <mat-card class="display-card" appearance="outlined">
+  <!--<mat-card class="display-card" appearance="outlined">
     <tic-tac-toe title="Tic Tac Toe"></tic-tac-toe>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
@@ -17,8 +17,8 @@
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
     <crossword title="Crossword"></crossword>
-  </mat-card>
-  <mat-card class=" display-card treasure-hunt-card" appearance="outlined">
+  </mat-card>-->
+  <!--<mat-card class=" display-card treasure-hunt-card" appearance="outlined">
     <app-treasure-hunt title="Treasure Hunt"></app-treasure-hunt>
-  </mat-card>
+  </mat-card>-->
 </div>
