--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -6,10 +6,10 @@
   <mat-card class="display-card" appearance="outlined">
     <roman-numerals [title]="'Roman Numerals'"></roman-numerals>
   </mat-card>
-  <!--<mat-card class="display-card" appearance="outlined">
-    <tic-tac-toe title="Tic Tac Toe"></tic-tac-toe>
-  </mat-card>
   <mat-card class="display-card" appearance="outlined">
+    <tic-tac-toe [title]="'Tic Tac Toe'"></tic-tac-toe>
+  </mat-card>
+  <!--<mat-card class="display-card" appearance="outlined">
     <directions title="Directions"></directions>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
