Brought back the directions component

--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -9,10 +9,10 @@
   <mat-card class="display-card" appearance="outlined">
     <tic-tac-toe [title]="'Tic Tac Toe'"></tic-tac-toe>
   </mat-card>
-  <!--<mat-card class="display-card" appearance="outlined">
-    <directions title="Directions"></directions>
-  </mat-card>
   <mat-card class="display-card" appearance="outlined">
+    <directions [title]="'Directions'"></directions>
+  </mat-card>
+  <!--<mat-card class="display-card" appearance="outlined">
     <to-do-list title="To Do List"></to-do-list>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
