--- a/src/app/coding-challenges/directions/directions.component.html
+++ b/src/app/coding-challenges/directions/directions.component.html
@@ -1,11 +1,9 @@
-<h3>{{ title }}</h3>
-<p>This challenge is about taking a list of directions and taking out the useless ones.
-</p>
+<h3>{{ title() }}</h3>
+<p>This challenge is about taking a list of directions and taking out the useless ones.</p>
 <p>For example, north and south are
     opposites so if next to each other they cancel out.
 </p>
-<p>Same with east and west. North, south and west will reduce to
-    just west.</p>
+<p>Same with east and west. North, south and west will reduce to just west.</p>
 <mat-label>Click direction to add</mat-label>
 <div>
     <button mat-button color="primary" (click)="addNorth()">North</button>
