Added back the crossword component

--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -1,23 +1,23 @@
 <h3>Coding Challenges</h3>
 <div class="card-container">
   <mat-card class="display-card" appearance="outlined">
-    <chemistry-calculator [title]="'Chemistry Calculator'"></chemistry-calculator>
+    <chemistry-calculator></chemistry-calculator>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
-    <roman-numerals [title]="'Roman Numerals'"></roman-numerals>
+    <roman-numerals></roman-numerals>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
-    <tic-tac-toe [title]="'Tic Tac Toe'"></tic-tac-toe>
+    <tic-tac-toe></tic-tac-toe>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
-    <directions [title]="'Directions'"></directions>
-  </mat-card>
-  <!--<mat-card class="display-card" appearance="outlined">
-    <to-do-list title="To Do List"></to-do-list>
+    <directions></directions>
   </mat-card>
   <mat-card class="display-card" appearance="outlined">
-    <crossword title="Crossword"></crossword>
-  </mat-card>-->
+    <to-do-list></to-do-list>
+  </mat-card>
+  <mat-card class="display-card" appearance="outlined">
+    <crossword></crossword>
+  </mat-card>
   <!--<mat-card class=" display-card treasure-hunt-card" appearance="outlined">
     <app-treasure-hunt title="Treasure Hunt"></app-treasure-hunt>
   </mat-card>-->
