--- a/src/app/coding-challenges/directions/directions.component.html
+++ b/src/app/coding-challenges/directions/directions.component.html
@@ -1,4 +1,4 @@
-<h3>{{ title() }}</h3>
+<h3>{{ title }}</h3>
 <p>This challenge is about taking a list of directions and taking out the useless ones.</p>
 <p>For example, north and south are
     opposites so if next to each other they cancel out.
