--- a/src/app/coding-challenges/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/coding-challenges/tic-tac-toe/tic-tac-toe.component.html
@@ -1,4 +1,4 @@
-<h3>{{ title() }}</h3>
+<h3>{{ title }}</h3>
 <h3>{{ winnerStatus }}</h3>
 <div class="gameBoard">
   @for (rowData of ticTacGameBoard; track rowData.id; let i = $index) {
