--- a/src/app/coding-challenges/chemistry-calculator/chemistry-calculator.component.html
+++ b/src/app/coding-challenges/chemistry-calculator/chemistry-calculator.component.html
@@ -1,4 +1,4 @@
-<h3>{{ title() }}</h3>
+<h3>{{ title }}</h3>
 <mat-form-field>
   <mat-label>Enter compound</mat-label>
   <input matInput type="text" [(ngModel)]="compound">
