--- a/src/app/coding-challenges/roman-numerals/roman-numerals.component.html
+++ b/src/app/coding-challenges/roman-numerals/roman-numerals.component.html
@@ -1,4 +1,4 @@
-<h3>{{ title() }}</h3>
+<h3>{{ title }}</h3>
 <mat-form-field>
   <mat-label>Enter Numeral</mat-label>
   <input matInput type="text" [(ngModel)]="numeral">
